[Offline pages] Add navigation error handling to background loader.

This ensures that we don't try to download any net error pages.

BUG=691141

Review-Url: https://codereview.chromium.org/2656763002
Cr-Commit-Position: refs/heads/master@{#450146}

Former-commit-id: 91941581b49f242755c8246fb788ec2ceeee65bd